# GAME2048

./: Extension评分参考标准.md  README.md
Game2048/: CMakeLists.txt  test.sh
Game2048/cmake/: mingw-w64-toolchain.cmake
Game2048/include/: ControlStyle.h  Game2048.h  Game2048_Data.h  Game2048_Logic.h  Game2048_Messages.h  Game2048_UI.h
Game2048/src/: Game2048.cpp  Game2048_Data.cpp  Game2048_Logic.cpp  Game2048_Messages.cpp  Game2048_UI.cpp  main.cpp
